Move styles to a different file

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
             "matches": [
                 "https://www.skroutz.gr/*"
             ],
+            "css": ["style.css"],
             "js": [
                 "background.js"
             ],
