--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Skroutz Sponsored Flagger",
     "description": "Flags sponsored products on Skroutz.gr",
-    "version": "1.1",
+    "version": "1.2",
     "manifest_version": 3,
     "permissions": [],
     "content_scripts": [
@@ -10,13 +10,17 @@
                 "https://www.skroutz.gr/*"
             ],
             "css": [
-                "style.css"
+                "style.css",
+                "popup.css"
             ],
             "js": [
                 "background.js",
                 "manipulators/addBlockedIndication.js",
                 "manipulators/flagSponsoredContent.js",
-                "manipulators/removeSponsoredContent.js"
+                "manipulators/flagPromotedContent.js",
+                "manipulators/flagPromoVideo.js",
+                "manipulators/removeSponsoredContent.js",
+                "manipulators/retrieveLanguage.js"
             ],
             "run_at": "document_end"
         }
