--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Skroutz Sponsored Flagger",
   "description": "Flags sponsored products on Skroutz.gr",
-  "version": "1.3",
+  "version": "1.4",
   "manifest_version": 3,
   "permissions": [],
   "content_scripts": [
@@ -39,5 +39,13 @@
   "icons": {
     "48": "/assets/icons/48.png",
     "128": "/assets/icons/128.png"
+  },
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "addon.todo@example.com",
+      "strict_min_version": "109.0"
+    }
   }
+  
 }
