--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Skroutz Sponsored Flagger",
   "description": "Flags sponsored products on Skroutz.gr",
-  "version": "1.3",
+  "version": "1.4",
   "manifest_version": 3,
   "permissions": [],
   "content_scripts": [
@@ -17,6 +17,7 @@
       ],
       "js": [
         "background.js",
+        "manipulators/buyThroughSkroutzIndicator.js",
         "manipulators/addBlockedIndication.js",
         "manipulators/separatePromoListFlagger.js",
         "manipulators/videoFlagger.js",
