Fix visibility bug and update organisation

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,6 @@
       ],
       "css": [
         "css/flaggerToggle.css",
-        "css/popup.css",
         "css/productFlags.css",
         "css/shelfFlags.css",
         "css/style.css",
@@ -20,16 +19,16 @@
       ],
       "js": [
         "background.js",
-        "retrievers/retrieveLanguage.js",
-        "retrievers/retrieveVisibility.js",
+        "flaggers/frequentlyBoughtTogetherFlagger.js",
+        "flaggers/productFlagger.js",
+        "flaggers/separatePromoListFlagger.js",
+        "flaggers/videoFlagger.js",
+        "flaggers/shelfFlagger.js",
         "manipulators/buyThroughSkroutzIndicator.js",
         "manipulators/addBlockedIndication.js",
-        "manipulators/separatePromoListFlagger.js",
-        "manipulators/videoFlagger.js",
-        "manipulators/productFlagger.js",
         "manipulators/toggleSponsoredContentVisibility.js",
-        "manipulators/shelfFlagger.js",
-        "manipulators/frequentlyBoughtTogetherFlagger.js"
+        "retrievers/retrieveLanguage.js",
+        "retrievers/retrieveVisibility.js"
       ],
       "run_at": "document_end"
     }
