--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -43,5 +43,11 @@
   "icons": {
     "48": "/assets/icons/48.png",
     "128": "/assets/icons/128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "skroutz-sponsored-flagger@itsiakkas.com",
+      "strict_min_version": "42.0"
+    }
   }
 }
