--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@types/chrome": "^0.0.234"
+    "@types/chrome": "^0.0.234",
+    "clean-webpack-plugin": "^4.0.0"
   },
   "scripts": {
     "build:chrome": "webpack --config webpack/webpack.chrome.config.js",
