refactor: create a common config for webpack
dynamically merge common and browser specific webpack configuration files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "git-blame.gitWebUrl": ""
+  "git-blame.gitWebUrl": "",
+  "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${profileName}${separator}${appName}${separator}[Branch: refactor/webpack-config]"
 }
