--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "git-blame.gitWebUrl": "",
-  "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${profileName}${separator}${appName}${separator}[Branch: refactor/webpack-config]"
+  "git-blame.gitWebUrl": ""
 }
