Update code design with new eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,5 +32,8 @@
             "error",
             "always"
         ]
-    }
+    },
+    "globals": {
+        "chrome": "readonly"
+    }    
 }
