--- a/src/manifest_firefox.json
+++ b/src/manifest_firefox.json
@@ -1,7 +1,7 @@
 {
-  "name": "Skroutz Sponsored Flagger",
+  "name": "reSkroutzed",
   "description": "Flags sponsored products on Skroutz.gr",
-  "version": "1.5.8",
+  "version": "1.5.9",
   "manifest_version": 3,
   "permissions": [],
   "host_permissions": [
@@ -38,7 +38,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "skroutz-sponsored-flagger@itsiakkas.com",
+      "id": "reskroutzed@itsiakkas.com",
       "strict_min_version": "109.0"
     }
   }
