--- a/src/manifest_firefox.json
+++ b/src/manifest_firefox.json
@@ -38,7 +38,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "reskroutzed@itsiakkas.com",
+      "id": "skroutz-sponsored-flagger@itsiakkas.com",
       "strict_min_version": "109.0"
     }
   }
