--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "@types/chrome": "^0.0.234",
-    "clean-webpack-plugin": "^4.0.0"
+    "@types/chrome": "0.0.280",
+    "clean-webpack-plugin": "4.0.0"
   },
   "scripts": {
     "start:chrome": "web-ext run --source-dir ./build/chrome_build/",
@@ -12,15 +12,15 @@
     "lint-fix": "eslint \"**/*.ts\" --fix"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "eslint": "^8.54.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-merge": "^5.10.0",
-    "zip-webpack-plugin": "^4.0.1"
+    "@typescript-eslint/eslint-plugin": "8.12.2",
+    "@typescript-eslint/parser": "8.12.2",
+    "copy-webpack-plugin": "12.0.2",
+    "eslint": "9.14.0",
+    "ts-loader": "9.5.1",
+    "typescript": "5.6.3",
+    "webpack": "5.96.1",
+    "webpack-cli": "5.1.4",
+    "webpack-merge": "6.0.1",
+    "zip-webpack-plugin": "4.0.2"
   }
 }
