--- a/src/manifest_chrome.json
+++ b/src/manifest_chrome.json
@@ -1,7 +1,7 @@
 {
   "name": "reSkroutzed",
   "description": "Flags sponsored products on Skroutz.gr",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "manifest_version": 3,
   "permissions": [],
   "host_permissions": [
@@ -17,7 +17,8 @@
         "css/productFlags.css",
         "css/shelfFlags.css",
         "css/style.css",
-        "css/videoFlags.css"
+        "css/videoFlags.css",
+        "css/darkModeToggle.css"
       ],
       "js": [
         "background.js"
