Major updates to dark mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,14 @@
   ],
   "cSpell.words": [
     "Skroutzed"
+  ],
+  "spellright.language": [
+    "en"
+  ],
+  "spellright.documentTypes": [
+    "markdown",
+    "latex",
+    "plaintext",
+    "css"
   ]
 }
