--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start:firefox": "web-ext run --source-dir ./build/firefox_build/",
     "build:chrome": "webpack --env chrome",
     "build:firefox": "webpack --env firefox",
+    "watch:chrome": "webpack --env chrome --watch",
+    "watch:firefox": "webpack --env firefox --watch",
+    "dev:chrome": "npm-run-all --parallel watch:chrome start:chrome",
+    "dev:firefox": "npm-run-all --parallel watch:firefox start:firefox",
     "lint": "eslint \"**/*.ts\"",
     "lint-fix": "eslint \"**/*.ts\" --fix"
   },
@@ -16,6 +20,7 @@
     "@typescript-eslint/parser": "8.12.2",
     "copy-webpack-plugin": "12.0.2",
     "eslint": "9.14.0",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "9.5.1",
     "typescript": "5.6.3",
     "webpack": "5.96.1",
