feat: Implement universal toggle for visibility settings and enhance video handling
- Added a new UniversalToggleHandler to manage visibility settings for ads and videos.
- Introduced a video toggle button to control the visibility of promotional videos.
- Updated the promotional video handler to support new visibility logic for video elements.
- Enhanced CSS styles for flagged videos and promotional video cards.
- Refactored visibility retrieval functions to include video visibility.
- Updated state type to track video visibility.
- Modified manifest files to include new CSS for the universal toggle.

--- a/src/manifest_chrome.json
+++ b/src/manifest_chrome.json
@@ -18,7 +18,8 @@
         "css/shelfFlags.css",
         "css/style.css",
         "css/videoFlags.css",
-        "css/darkModeToggle.css"
+        "css/darkModeToggle.css",
+        "css/universalToggle.css"
       ],
       "js": [
         "background.js"
