--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,12 @@
     "markdown",
     "latex",
     "plaintext",
-    "css"
-  ]
+    "css",
+    "Log"
+  ],
+  "spellright.parserByClass": {
+    "Log": {
+      "parser": "plain"
+    }
+  }
 }
