--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,14 @@
     "source.fixAll.eslint": "explicit"
   },
   "eslint.validate": [
-    "javascript"
+    "javascript",
+    "typescript",
+    "typescriptreact",
+    "javascriptreact"
   ],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "eslint.format.enable": true,
   "cSpell.words": [
     "Skroutzed"
   ],
