--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "dev:chrome": "npm-run-all --parallel watch:chrome start:chrome",
     "dev:firefox": "npm-run-all --parallel watch:firefox start:firefox",
     "lint": "eslint \"**/*.ts\"",
-    "lint-fix": "eslint \"**/*.ts\" --fix"
+    "lint-fix": "eslint \"**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,js,json,css}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json,css}\"",
+    "check": "npm-run-all format lint-fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.3",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.89.0",
