feat: Add storage permissions and implement settings for ads, videos, and dark mode
- Updated Chrome and Firefox manifest files to include storage permissions.
- Enhanced popup CSS for improved styling and added toggle switch functionality.
- Refactored popup HTML to include quick settings for ads, videos, and dark mode.
- Implemented JavaScript logic to manage settings and update UI based on user preferences.
- Added functionality to track and display statistics for ads, shelves, and videos.
- Updated background script to handle new message actions for toggling settings.
- Enhanced BrowserClient to support asynchronous storage retrieval.
- Improved UniversalToggleDecorator to refresh settings and update UI accordingly.

--- a/manifests/manifest_chrome.json
+++ b/manifests/manifest_chrome.json
@@ -3,7 +3,9 @@
     "description": "Enhances Skroutz.gr by flagging sponsored products, price checker, and providing a dark mode toggle",
     "version": "1.8.1",
     "manifest_version": 3,
-    "permissions": [],
+    "permissions": [
+        "storage"
+    ],
     "host_permissions": [
         "*://www.skroutz.gr/*"
     ],
