--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.89.0",
