Add tests and test github action starting with client tests

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:firefox": "web-ext run --source-dir ./build/firefox_build/",
     "build:chrome": "webpack --env chrome",
     "build:firefox": "webpack --env firefox",
+    "build": "npm-run-all --parallel build:chrome build:firefox",
     "watch:chrome": "webpack --env chrome --watch",
     "watch:firefox": "webpack --env firefox --watch",
     "dev:chrome": "npm-run-all --parallel watch:chrome start:chrome",
@@ -16,22 +17,37 @@
     "lint-fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.{ts,js,json,css}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json,css}\"",
-    "check": "npm-run-all format lint-fix"
+    "check": "npm-run-all format lint-fix",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "analyze": "webpack --env chrome --analyze"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "happy-dom": "^12.10.3",
+    "jsdom": "^22.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
+    "vitest": "^1.2.2",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.0.2",
     "webpack-merge": "^5.10.0",
     "zip-webpack-plugin": "^4.0.1"
