--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "vitest": "^1.2.2",
+    "web-ext": "^8.9.0",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.0.2",
