Add workflow_dispatch support to release workflow for manual tagging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,11 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        description: 'Tag to release (e.g. v1.0.0)'
+        required: true
 
 jobs:
   release:
@@ -12,7 +17,21 @@ jobs:
       contents: write
 
     steps:
+      - name: Determine Tag
+        id: tag
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "tag=${{ github.event.inputs.tag_name }}" >> $GITHUB_OUTPUT
+            echo "ref=refs/tags/${{ github.event.inputs.tag_name }}" >> $GITHUB_OUTPUT
+          else
+            echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+            echo "ref=${{ github.ref }}" >> $GITHUB_OUTPUT
+          fi
+
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ steps.tag.outputs.ref }}
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -32,14 +51,15 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          name: ReSkroutzed ${{ github.ref_name }}
+          tag_name: ${{ steps.tag.outputs.tag }}
+          name: ReSkroutzed ${{ steps.tag.outputs.tag }}
           draft: false
           prerelease: false
           files: |
             build/chrome_build.zip
             build/firefox_build.zip
           body: |
-            # ReSkroutzed ${{ github.ref_name }}
+            # ReSkroutzed ${{ steps.tag.outputs.tag }}
 
             ## Release Notes
 
