--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@types/chrome": "^0.0.234",
     "clean-webpack-plugin": "^4.0.0"
